--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@ Click me to display Date and Time.</button>
 
 <p id="demo"></p>
 
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Welcome to My Website</h2>
+<p>Click the link below to go to the About page:</p>
+
+<a href="about.html">Go to Hello page/a>
+  
 </body>
 </html> 
