--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ Click me to display Date and Time.</button>
 <h2>Welcome to My Website</h2>
 <p>Click the link below to go to the About page:</p>
 
-<a href="about.html">Go to Hello page/a>
+<a href="hello.html">Go to Hello page/a>
   
 </body>
 </html> 
