--- a/hello.html
+++ b/hello.html
@@ -15,5 +15,9 @@
 
 <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
 
+<p>Say hello to javscript!.</p>
+
+<a href="index.html">Go Back to Home</a>
+
 </body>
 </html>
