--- a/hello.html
+++ b/hello.html
@@ -18,6 +18,7 @@
 <p>Say hello to javscript!.</p>
 
 <a href="index.html">Go Back to Home</a>
+<a href="index.html">Go To the Lightbulb</a>
 
 </body>
 </html>
