--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Click me to display Date and Time.</button>
 <p>Click the link below to go to the About page:</p>
 
 <a href="hello.html">Go to Hello page/a>
+<a href="Lightbulb.html">Go To the Lightbulb</a>
   
 </body>
 </html> 
