--- a/Lightbulb.html
+++ b/Lightbulb.html
@@ -14,5 +14,7 @@
 
 <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
 
+  <a href="hello.html">Go To the hello page</a>
+
 </body>
 </html>
