--- a/Lightbulb.html
+++ b/Lightbulb.html
@@ -15,6 +15,7 @@
 <button onclick="document.getElementById('myImage').src='pic_bulboff.gif'">Turn off the light</button>
 
   <a href="hello.html">Go To the hello page</a>
+<a href="index.html">Go To the home page</a>
 
 </body>
 </html>
