--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
 <head>
     <style>
         #demo {
-            color: blue; /* Change text color to blue */
+            color: red; /* Change text color to blue */
         }
     </style>
 </head>
@@ -18,7 +18,6 @@
 <p>Say hello to javscript!.</p>
 
 <a href="index.html">Go Back to Home</a>
-<a href="Lightbulb.html">Go To the Lightbulb</a>
 
 </body>
 </html>
