--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <body>
 
 <h2>My First JavaScript</h2>
-
+<p>What is the Time?</p>
+<p>I do not know, by the way what is the date</p>
+<p>I do not know, but i need to know the time to go to my flight to USA</p>
+<p>I need to know the date for my dad's birthday because i always forget</p>
 <button type="button"
 onclick="document.getElementById('demo').innerHTML = Date()">
+<p>Press the button below to find out the date and time</p>
 Click me to display Date and Time.</button>
-
+<p>Oh yes click the button now!</p>
+<p>Okay *clicks button* Yes i now the time</p>
+<p>I know the date</p>
+<p>---------------------------------------------------------------------------</p>
 <p id="demo"></p>
+<p>this is just a demo. Have any ideas for the real one?</p>
+</body>
+</html> 
+
 
 <p>Click the link below to go to the About page:</p>
 
